Link 'Budget by School' and register new charts
Update navigation and chart wiring

--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,8 @@ header p {
 #chart_Expense25, #chart_Expense26, #chart_ExpenseChange26,
 #chart_ecs_Expense,
 #housingChart, #urecChart, #parkingChart,
-#chart_StudentFeesTotals, #chart_StudentFeesOverview, #chart_MandatoryFeeBreakdown, #chart_ProgramFeesBreakdown {
+#chart_StudentFeesTotals, #chart_StudentFeesOverview, #chart_MandatoryFeeBreakdown, #chart_ProgramFeesBreakdown,
+#chart_JSOM_Expenses, #chart_NSM_Expenses, #chart_AHT_Expenses, #chart_AHT_Revenue, #chart_Expenses_School {
     width: 100%;
     height: 500px; /* Tall enough for both Pie and Bar */
 }
